--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!-- Matthew Peel -->
-</body>
+<html lang="en-US">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <title>Matthew Peel | WDD 130</title>
+        <meta name="description" content="A homepage to contain my work for the term.">
+        <meta name="author" content="Matthew Peel">
+        <link rel="stylesheet" href="styles/styles.css">
+    </head>
+    <body>
+        <header>
+            <nav>
+              <a href="https://mpbyui.github.io/wdd130/">Home</a>
+              <a href="wwr/">Rafting Website</a>
+              <a href="https://linkedin.com">Linkedin</a>
+            </nav>
+          </header>
+          <main>
+            <h1>Matthew Peel | WWD 130</h1>
+            <img src="images/portrait.jpg" alt="Hello, my name is Matthew Peel" width="200">
+            <p>Hello! My name is Matthew Peel and I am from California. I enjoy drawing, cycling and computers.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <!-- <ul class="box">
+              <li><a href="" target="_blank">Blank</a>Midori Bridge, Ogaki Gifu</li>
+              <li><a href="" target="_blank">Blank</a></li>
+              <li><a href="" target="_blank">Blank</a></li>
+            </ul>> -->
+          </main>
+          <aside class="box">
+            <h2>United States Of America</h2>
+            <img src="images/san_gorgonio.jpg" alt="San Gorgonio Mountians">
+            <p>I come from California but more specfically near the San Bernardino Mountains which I saw everyday.  It has the tallest peak in Southing California at 3,506 meters.  The entire range is surrounded and divides 3 major regions of Southern California.</p>
+          </aside>
+          <footer>
+            <p>©️2025 🔺💚 Matthew Peel 🔺💚 California, USA</p>
+          </footer>
+    </body>
 </html>
 
-
-<!-- why
-  -->
