--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -9,24 +9,31 @@
     <link rel="stylesheet" href="styles/layout.css">
 </head>
 
-<header>
-    <nav>
-        <ul class="navigation">
-            <li><a href="#" title="Home">Home</a></li>
-            <li><a href="#" title="About Us">About</a></li>
-            <li><a href="#" title="Our Partners">Affiliates</a></li>
-            <li><a href="#" title="History of Our Organization">History</a></li>
-            <li><a href="#" title="Contact Us">Contact</a></li>
-        </ul>
-    </nav>
 
 <body>
-</header>
-      <main>
-        main content
-      </main>
-      <aside>
-        asside content
-      </aside>
+    <header>
+        <nav>
+            <ul class="navigation">
+                <li><a href="#" title="Home">Home</a></li>
+                <li><a href="#" title="About Us">About</a></li>
+                <li><a href="#" title="Our Partners">Affiliates</a></li>
+                <li><a href="#" title="History of Our Organization">History</a></li>
+                <li><a href="#" title="Contact Us">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="mainbody">
+        <main>
+            <h2>main content</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad minus aperiam modi at eveniet harum maiores saepe laudantium dicta nostrum sed totam laboriosam minima ipsa eaque possimus, aut voluptatem ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum magni perferendis ad similique iusto, quisquam nam eum optio sapiente consequatur amet laborum ex beatae, error aspernatur quasi cupiditate aut accusamus.</p>
+        </main>
+        <aside>
+            <h2>asside content</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dolore eligendi excepturi iure animi voluptate officiis? Repudiandae voluptatum odit iste corrupti, alias sed a aspernatur ipsam numquam voluptas? Ab, optio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus minima perspiciatis soluta laborum assumenda aspernatur quia magnam inventore! Quasi impedit rerum quas, quia consequuntur sequi? At, ratione? Nulla, aut deserunt.</p>
+        </aside>
+    </div>
+    <footer>
+        <p>2025 Matthew Peel | WDD 131</p>
+    </footer>
 </body>
 </html>
