--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -7,6 +7,7 @@
     <meta name="description" content="holy grail thing.">
     <meta name="author" content="Matthew Peel">
     <link rel="stylesheet" href="styles/layout.css">
+    <script src="scripts/myscripts.js" defer></script>
 </head>
 
 
