--- a/index.html
+++ b/index.html
@@ -1,40 +1,63 @@
 <!DOCTYPE html>
-<html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Matthew Peel | WDD 130</title>
-        <meta name="description" content="A homepage to contain my work for the term.">
-        <meta name="author" content="Matthew Peel">
-        <link rel="stylesheet" href="styles/styles.css">
-    </head>
-    <body>
-        <header>
-            <nav>
-              <a href="https://mpbyui.github.io/wdd130/">Home</a>
-              <a href="wwr/">Rafting Website</a>
-              <a href="https://linkedin.com">Linkedin</a>
-            </nav>
-          </header>
-          <main>
-            <h1>Matthew Peel | WWD 130</h1>
-            <img src="images/portrait.jpg" alt="Hello, my name is Matthew Peel" width="200">
-            <p>Hello! My name is Matthew Peel and I am from California. I enjoy drawing, cycling and computers.  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <!-- <ul class="box">
-              <li><a href="" target="_blank">Blank</a>Midori Bridge, Ogaki Gifu</li>
-              <li><a href="" target="_blank">Blank</a></li>
-              <li><a href="" target="_blank">Blank</a></li>
-            </ul>> -->
-          </main>
-          <aside class="box">
-            <h2>United States Of America</h2>
-            <img src="images/san_gorgonio.jpg" alt="San Gorgonio Mountians">
-            <p>I come from California but more specfically near the San Bernardino Mountains which I saw everyday.  It has the tallest peak in Southing California at 3,506 meters.  The entire range is surrounded and divides 3 major regions of Southern California.</p>
-          </aside>
-          <footer>
-            <p>©️2025 🔺💚 Matthew Peel 🔺💚 California, USA</p>
-          </footer>
-    </body>
-</html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Matthew Peel | WDD 131</title>
+    <meta name="Home Page" content="WDD 131 – Dynamic Web Fundamentals">
+    <meta name="Matthew Peel" content="Home">
+    <link rel="stylesheet" href="styles/base.css">
+    <script src="scripts/myscripts.js" defer></script>
+</head>
 
+
+
+<body>
+  <header>
+    <h1>Welcome to our website!</h1>
+      <nav>
+          <ul class="navigation">
+              <li><a href="#" title="Resume">LinkedIn</a></li>
+              <li><a href="#" title="Lessons">Canvas</a></li>
+              <li><a href="#" title="Favorite">Scripture</a></li>
+              <li><a href="#" title="Final Project">Final Project</a></li>
+          </ul>
+      </nav>
+  </header>
+  <div class="mainbody">
+      <div class="aboutme">
+        <h2>About Me</h2>
+        <main>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad minus aperiam modi at eveniet harum maiores saepe laudantium dicta nostrum sed totam laboriosam minima ipsa eaque possimus, aut voluptatem ducimus. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum magni perferendis ad similique iusto, quisquam nam eum optio sapiente consequatur amet laborum ex beatae, error aspernatur quasi cupiditate aut accusamus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates voluptatum reprehenderit molestiae sed vitae. Maiores enim unde minus? Laudantium odio iure magni aliquam, voluptas deserunt eum iusto rerum vero quam.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, vel, quod, perspiciatis, debitis soluta facere veniam nemo in quos iure commodi ut autem. Cumque, quos?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro eius natus quo recusandae vitae labore vel ipsum ipsa, earum omnis? Voluptates, dolores nisi blanditiis dicta dolore sed labore. Doloribus, sapiente.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, repellat, ea vel commodi architecto recusandae magnam autem nisi, quae veniam expedita perferendis nihil? Quo, magni.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, ipsam, quos, voluptates, quidem similique possimus dicta voluptatum error autem atque fugiat quia iure earum expedita! Temporibus, non.</p>
+        </main>
+      </div>
+      <div class="webdev">
+        <h2>Web Dev Resources</h2>
+        <aside>
+            <ul>
+              <li><a href="#" title="#">Dev.to Community</a></li>
+              <p></p>
+              <li><a href="#" title="#">Samshing Magazine</a></li>
+              <p></p>
+              <li><a href="#" title="#">CSS Tricks</a></li>
+              <p></p>
+              <li><a href="#" title="#">W3 Schools</a></li>
+              <p></p>
+              <li><a href="#" title="#">Udemy</a></li>
+              <p></p>
+              <li><a href="#" title="#">Image Placeholder</a></li>
+          </ul>
+        </aside>
+      </div>
+  </div>
+  <footer>
+
+      <p class="footauthor">©2025 | Matthew Peel | WDD 131</p>
+  </footer>
+</body>
+</html>
