--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <h1>WDD 131: Dynamic Web Fundamentals-Matthew Peel</h1>
     </div>
       <nav class="navmenu">
-        <li><a href="https://youtu.be/dQw4w9WgXcQ?si=oT3HRoGqyk5GjICs">LinkedIn</a></li>
-        <li><a href="https://byupw.instructure.com/">Canvas</a></li>
-        <li><a href="https://youtu.be/dQw4w9WgXcQ?si=oT3HRoGqyk5GjICs">Scripture</a></li>
-        <li><a href="https://youtu.be/dQw4w9WgXcQ?si=oT3HRoGqyk5GjICs">Final Project</a></li>
+        <a href="https://youtu.be/dQw4w9WgXcQ?si=oT3HRoGqyk5GjICs">LinkedIn</a>
+        <a href="https://byupw.instructure.com/">Canvas</a>
+        <a href="https://youtu.be/dQw4w9WgXcQ?si=oT3HRoGqyk5GjICs">Scripture</a>
+        <a href="https://youtu.be/dQw4w9WgXcQ?si=oT3HRoGqyk5GjICs">Final Project</a>
     
       </nav>
   </header>
