--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Matthew Peel | WDD 131</title>
-    <meta name="Home Page" content="WDD 131 – Dynamic Web Fundamentals">
+    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals">
     <meta name="author" content="Matthew Peel">
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/myscripts.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <title>WDD 131 – Dynamic Web Fundamentals – Matthew Peel</title>
 </head>
 
 <body>
