--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
               <img src="images/usa.png" alt="usa" id="flag">
               <figcaption>The Offical Flag of Idaho</figcaption>
             </figure>
-            <div>
+            <section>
+
               <figure id="countryinfo"><p>The United States of America (USA), also known as the United States (U.S.) or America, is a country primarily located in North America. It is a federal republic of 50 states.</p>
               <p>Idaho is a landlocked state in the Pacific Northwest and Mountain West subregions of the Western United States.</p></figure>
               <figcaption id="cite">From Wikipedia</figcaption>
-            </div>
+            </section>
+
             <figure>
               <img src="images/idaho.jpg" alt="idaho" id="flag">
               <figcaption>The Offical Flag of Idaho</figcaption>
