--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
           <div class="flagP">
             <figure>
-              <img src="images/usa.png" alt="usa" id="flag">
+              <img src="images/usa.png" alt="usa" class="flag">
               <figcaption>The Offical Flag of Idaho</figcaption>
             </figure>
             <section>
@@ -55,7 +55,7 @@
             </section>
 
             <figure>
-              <img src="images/idaho.jpg" alt="idaho" id="flag">
+              <img src="images/idaho.jpg" alt="idaho" class="flag">
               <figcaption>The Offical Flag of Idaho</figcaption>
             </figure>
           </div>
