--- a/index.html
+++ b/index.html
@@ -45,18 +45,19 @@
           <div class="flagP">
             <figure>
               <img src="images/usa.png" alt="usa" class="flag">
-              <figcaption>The Offical Flag of Idaho</figcaption>
+              <figcaption>The Offical Flag of The USA</figcaption>
             </figure>
-            <section>
+            
+            <div>
 
               <figure id="countryinfo"><p>The United States of America (USA), also known as the United States (U.S.) or America, is a country primarily located in North America. It is a federal republic of 50 states.</p>
               <p>Idaho is a landlocked state in the Pacific Northwest and Mountain West subregions of the Western United States.</p></figure>
-              <figcaption id="cite">From Wikipedia</figcaption>
-            </section>
+              <p id="cite">From Wikipedia</p>
+              </div>
 
             <figure>
               <img src="images/idaho.jpg" alt="idaho" class="flag">
-              <figcaption>The Offical Flag of Idaho</figcaption>
+              <figcaption>The Offical Flag and Seal of Idaho</figcaption>
             </figure>
           </div>
           
