--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="WDD 131 – Dynamic Web Fundamentals">
     <meta name="author" content="Matthew Peel">
     <link rel="stylesheet" href="styles/base.css">
-    <script src="scripts/myscripts.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <script src="scripts/getdates.js" defer></script>
     <title>WDD 131 – Dynamic Web Fundamentals – Matthew Peel</title>
 </head>
 
