--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <p class="footauthor">©2025 | Matthew Peel | WDD 131</p>
       <span id="currentyear"></span>
-      <script>scripts/getdates.js</script>
+      <p id="lastModified"></p>
   </footer>
 </body>
 </html>
