--- a/index.html
+++ b/index.html
@@ -83,14 +83,15 @@
       </div>
     </section>
   </main>
-
+<!-- test -->
 
 
   <footer>
 
-      <p class="footauthor">©2025 | Matthew Peel | WDD 131</p>
-      <span id="currentyear"></span>
-      <p id="lastModified"></p>
+      <p class="footauthor">©<span id="currentyear">2025</span>
+         | Matthew Peel | Idaho, USA</p>
+      
+        <p id="lastModified"></p>
   </footer>
 </body>
 </html>
