--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Matthew Peel | WDD 131</title>
+    <title>Matthew  | WDD 131</title>
     <meta name="description" content="holy grail thing.">
-    <meta name="author" content="Matthew Peel">
+    <meta name="author" content="Matthew ">
     <link rel="stylesheet" href="styles/layout.css">
     <script src="scripts/myscripts.js" defer></script>
 </head>
@@ -34,7 +34,7 @@
         </aside>
     </div>
     <footer>
-        <p>2025 Matthew Peel | WDD 131</p>
+        <p>2025 Matthew  | WDD 131</p>
     </footer>
 </body>
 </html>
