--- a/temples.html
+++ b/temples.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <script src="scripts/getdates.js" defer></script>
+    <script src="scripts/temples.js" defer></script>
     <title>WDD 131 – Dynamic Web Fundamentals – Matthew </title>
 </head>
 
@@ -21,17 +21,17 @@
       <h1>WDD 131: Dynamic Web Fundamentals-Matthew </h1>
     </div>
       <nav class="navmenu">
-        <a href="https://youtu.be/dQw4w9WgXcQ?si=oT3HRoGqyk5GjICs">LinkedIn</a>
-        <a href="https://byupw.instructure.com/">Canvas</a>
-        <a href="https://youtu.be/dQw4w9WgXcQ?si=oT3HRoGqyk5GjICs">Scripture</a>
-        <a href="https://youtu.be/dQw4w9WgXcQ?si=oT3HRoGqyk5GjICs">Final Project</a>
-    
+        <a href="#" title="Home">Home</a>
+        <a href="#" title="Old">Old</a>
+        <a href="#" title="New">New</a>
+        <a href="#" title="Large">Large</a>
+        <a href="#" title="Small">Small</a>
       </nav>
   </header>
 
   <main>
     <h2>
-        Welcome to the Temple Album
+        Temple Album
     </h2>
 
 
